  * problem_report.py, CompressedValue: Add method splitlines() since we need
    it very often. Add test case to test_compressed_values(). (LP: #148305)
  * problem_report.py: Add test case to check that update() works and does the
    right thing with binary values and overwriting. This confirms that
    importing a dictionary works.
  * debian/local/setup-apport-retracer: Update for hardy.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 27 Nov 2007 13:17:47 +0100

apport (0.99) hardy; urgency=low

  * cli/apport-cli, qt4/apport-qt: Fix typo 'send' -> 'sent'.
    (LP: #139288)
  * apport_python_hook.py: Add user info, too. Also add check for this to the
    test suite. (LP: #145109)
  * apport/ui.py, run_crash(): Show a proper UI error message instead of just
    crashing with an exception if the crash report is inaccessible for the
    invoking user. (LP: #146464)
  * apport/crashdb_impl/memory.py: Implement mark_retraced(),
    get_unretraced(), and get_dup_unchecked() for completeness, and define
    _MemoryCrashDBTest also when not running file as __main__. This makes the
    class useful for higher-level test suites. Add test cases for the new
    functions.
  * apport/crashdb_impl/memory.py: Support 'dummy_data' option which adds a
    few dummy crashes by default. This is useful for external test suites
    which cannot otherwise pre-fill the in-memory db. Add checks that this
    works properly.
  * bin/crash-digger: Use self.log() more consistently, and flush stdout in
    log(), so that we do not lose logs on output redirection.
  * Add test-crash-digger: Initial test suite for bin/crash-digger.
  * apport/ui.py, run_crash(): Intercept CRC errors from the info collection
    thread, which happens on broken core dumps. (LP: #132212)
  * cli/apport-cli, ui_present_package_error(): Fix running of dialog, so that
    reporting package problems with apport-cli actually works. (LP: #136369)